clean up and upgrade sbt scripts